--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/ACNHVD1.gif" class="d-block w-100" id= "projectPic" alt="Animal Crossing New Horizons villager database gif">
-                        <div class="carousel-caption d-none d-md-block">
+                        <a href = "https://shnala.github.io/animal-crossing-new-horizons-villager-database/" target= "blank"><img src="assets/images/ACNHVD1.gif" class="d-block w-100" id= "projectPic" alt="Animal Crossing New Horizons villager database gif"></a>
+                          <div class="carousel-caption d-none d-md-block">
                           <h5>Animal Crossing New Horizons Villager Database</h5>
                           <p>This was a group project incorporating HTML, CSS, JS, Foundation and more.</p>
                         </div>
