--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
                           <p>This was a group project incorporating HTML, CSS, JS, Foundation and more.</p>
                         </div>
                       </div>
-                      <!-- <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                      <div class="carousel-item">
+                        <a href = "https://udfb-helping-hand.herokuapp.com/" target= "blank"></a>
+                        <img src="assets/images/UDFB.gif" class="d-block w-100" alt="gif displaying application functionality">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Second slide label</h5>
-                          <p>Some representative placeholder content for the second slide.</p>
+                          <h5>A Helping Hand</h5>
+                          <p>An application created for the University District Food Bank</p>
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <!-- <div class="carousel-item">
                         <img src="..." class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Third slide label</h5>
@@ -89,6 +90,7 @@
                 <a href="tel:3107810740">Phone</a>
                 <a href="mailto:denisearev@gmail.com">Email</a>
                 <a href="https://github.com/denisearevalo" target="blank">Github</a>
+                <a href="https://www.linkedin.com/in/denise-arevalo-634831225/" target="blank">LinkedIn</a>
             </div>
         </section>
    </main>
